exports[`AdapterSelector should render empty adapter list, expanded 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <DropdownButton
      className="btn-primary btn-nordic"
      id="navbar-dropdown"
      onToggle={[Function]}
      open={true}
      title="Select serial port" />
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`AdapterSelector should render empty adapter list, not expanded 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <DropdownButton
      className="btn-primary btn-nordic"
      id="navbar-dropdown"
      onToggle={[Function]}
      open={false}
      title="Select serial port" />
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`AdapterSelector should render empty list while loading 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <DropdownButton
      className="btn-primary btn-nordic"
      id="navbar-dropdown"
      onToggle={[Function]}
      open={true}
      title="Select serial port" />
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`AdapterSelector should render two adapters 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <DropdownButton
      className="btn-primary btn-nordic"
      id="navbar-dropdown"
      onToggle={[Function]}
      open={true}
      title="Select serial port">
      <MenuItem
        className="btn-primary"
        eventKey="/dev/tty0"
        onSelect={[Function]}>
        <div>
          /dev/tty0
        </div>
        <div
          style={
            Object {
              "fontSize": "small",
            }
          }>
          123456
        </div>
      </MenuItem>
      <MenuItem
        className="btn-primary"
        eventKey="/dev/tty1"
        onSelect={[Function]}>
        <div>
          /dev/tty1
        </div>
        <div
          style={
            Object {
              "fontSize": "small",
            }
          }>
          456789
        </div>
      </MenuItem>
    </DropdownButton>
    <div
      className="indicator off" />
  </div>
</span>
`;

exports[`AdapterSelector should render two adapters, one selected 1`] = `
<span
  title="Select serial port (Alt+P)">
  <div
    className="padded-row">
    <DropdownButton
      className="btn-primary btn-nordic"
      id="navbar-dropdown"
      onToggle={[Function]}
      open={true}
      title="/dev/tty1">
      <MenuItem
        className="btn-primary"
        eventKey="/dev/tty0"
        onSelect={[Function]}>
        <div>
          /dev/tty0
        </div>
        <div
          style={
            Object {
              "fontSize": "small",
            }
          }>
          123456
        </div>
      </MenuItem>
      <MenuItem
        className="btn-primary"
        eventKey="/dev/tty1"
        onSelect={[Function]}>
        <div>
          /dev/tty1
        </div>
        <div
          style={
            Object {
              "fontSize": "small",
            }
          }>
          456789
        </div>
      </MenuItem>
      <MenuItem
        className="btn-primary"
        eventKey="Close adapter"
        onSelect={[Function]}>
        <div>
          Close adapter
        </div>
        <div
          style={
            Object {
              "fontSize": "small",
            }
          }>
          
        </div>
      </MenuItem>
    </DropdownButton>
    <div
      className="indicator off" />
  </div>
</span>
`;
